cluster/apps/organizers/radarr/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: organizers
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`radarr.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: ${SECRET_CERT}
